--- a/.env.example
+++ b/.env.example
@@ -22,10 +22,15 @@ RABBITMQ_QUEUE_NAME=email-subscribers
 GRPC_CONNECTION_URL=localhost:5000
 
 # redis
-REDIS_HOST=localhost
+REDIS_HOST='127.0.0.1'
 REDIS_PORT=6379
 REDIS_USERNAME=
 REDIS_PASSWORD=
+
+# REDIS_HOST='127.0.0.1'
+# REDIS_PORT=6379
+# REDIS_PASSWORD=
+
 
 #MAIL
 MAIL_HOST=smtp.gmail.com
